# BrandRatingAnalysis

./: README.md  pyproject.toml
app/: brands.py  csv_file_reader.py  main.py  parser.py  price_average_brand.py  rating_average_brand.py
tests/: conftest.py  test_price_average_brand.py  test_rate_average_brand.py
