[project]
name = "brandratinganalysis"
version = "0.1.0"
description = ""
authors = [
    {name = "domitori",email = "dmlegasy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black (>=25.9.0,<26.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "pytest (>=8.4.2,<9.0.0)"
]
packages = [{ include = "app" }]


[tool.pytest.ini_options]
addopts = "-v --maxfail=2 --disable-warnings"
testpaths = ["tests"]
pythonpath = "."



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
